# Finsearch-reboot

./: code.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  code-checkpoint.md  requirements-checkpoint.txt
.virtual_documents/notebooks/: text_chunking.ipynb
artifacts/: agentic_rag_system_langgraph.mmd  chunks.jsonl  scripts_runtime_usage_audit.md  tables.jsonl
artifacts/index/: bm25.pkl  dense_meta.json  faiss.index
data/chunked/: AAPL_10-K_2025.tables.jsonl  AAPL_10-K_2025.text.jsonl  AAPL_10-K_2025.text.split.jsonl  AAPL_10-Q_2025Q2.tables.jsonl  AAPL_10-Q_2025Q2.text.jsonl  (+21 more)
docs/: ARCHITECTURE.md  CHANGELOG.md
notebooks/: Analyst Agent.ipynb  Context Selector and Generation.ipynb  Multi-Agent Orchestration.ipynb  Pandas Agent.ipynb  Planner Agent.ipynb  Query Expansion.ipynb  Retrieval Agent.ipynb  SEC_table_rowlabels.config.json  Test Retrieval.ipynb  Untitled.ipynb  chunks_loader.py  cloud_eval_log.jsonl  compare_two_models.ipynb  explore_chunks.ipynb  gemma_eval_log.jsonl  prompt_eval.py  qwen_eval_log.jsonl  r1_eval_log.jsonl  sec_embedder.py  show_model_summaries.ipynb  table_chunks.txt  table_eval.jsonl  table_summarization_eval.py  test_embedding.ipynb  test_ingesting.ipynb  test_table_chunker.ipynb  text_chunking.ipynb
scripts/: README.md  _common.py  ask.py  download_apple_xbrl.sh  download_xbrl.py  download_xbrl_sec.py  eval_retrieval.py  ingestion_cli.py  orchestrate_chunk_html_filings.py  orchestrate_embeddings.py  orchestrate_html_downloads.py  orchestrate_ingestion.py  orchestrate_table_summaries.py  run_pipeline.py
(+106 files in other folders)
